# betting-ladder-pm

./: .editorconfig  .env.example  .env.local-smoke.example  .gitattributes  .gitignore  .prettierignore  AGENTS.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/desktop/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/permissions/: app-trading-commands.toml
apps/desktop/src-tauri/src/: main.rs
apps/landing/: README.md  index.html  package.json  vite.config.ts
docs/: START_HERE_FOR_CODEX.md
docs/adr/: ADR-0001-live-ready-product.md  ADR-0002-desktop-first-tauri.md  ADR-0003-monorepo-pnpm-turborepo.md  ADR-0004-dual-venue-polymarket-kalshi.md  ADR-0005-legal-governance.md  ADR-0006-codex-operating-model.md  ADR-0007-landing-page-design-and-skills.md  ADR-0008-desktop-terminal-design-and-skills.md  ADR-0009-bootstrap-stack-and-quality-gates.md  ADR-0010-fair-monetization-model.md
docs/ai/: CODEX_GOALS.md  CODEX_OPERATING_MODEL.md  CONTEXT_INDEX.md  DESKTOP_APP_DESIGN_TASKPACK.md  DESKTOP_APP_TASKPACK.md  EXTERNAL_SKILL_AUDIT_DESKTOP_DESIGN.md  EXTERNAL_SKILL_AUDIT_FRONTEND_DESIGN.md  LANDING_PAGE_TASKPACK.md  PROMPTS.md  QUALITY_GATES.md  REVIEW_ROLES.md  SKILLS_REGISTRY.md  TASK_PACK_TEMPLATE.md  context-handoff.md
docs/architecture/: DEPENDENCY_BOUNDARIES.md  DESKTOP_PLATFORM_DECISION.md  MONOREPO_STRUCTURE.md  SYSTEM_ARCHITECTURE.md  (+1 more)
(+103 files in other folders)
