[package]
name = "prediction-ladder-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
alloy = { version = "1.6.3", default-features = false, features = ["signer-local", "signers"] }
base64 = "0.22.1"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std"] }
polymarket_client_sdk_v2 = { version = "=0.6.0-canary.1", default-features = false, features = ["clob", "gamma"] }
rand = "0.8.6"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
rsa = { version = "0.9.8", default-features = false, features = ["pem", "sha2"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tauri = { version = "2.6.2", features = [] }
tokio = { version = "1.50.0", features = ["time"] }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security_Cryptography", "Win32_System_DataExchange", "Win32_System_Memory"] }
